examples/bad/auto_return4.latf
auto f() {
    return 1;
    if (true) {
        return true; // error - different return types
    }
}

int main() {
    return 0;
}